# pydrawcore

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  test_out.txt  test_output.txt
.github/workflows/: docs.yml
docs/: index.md
docs/api/: controller.md  index.md  models.md  package.md  program.md
docs/examples/: calibrated-marks.md  feature-smoke.md  index.md  repeat-rosette.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: cli.md  turtle-dsl.md
docs/stylesheets/: extra.css
examples/turtle/: README.md  arena.draw  calibrated_marks.draw  circle.draw  feature_smoke.draw  material_test_card.draw  orbit_spiral.draw  petal_flower.draw  repeat_rosette.draw  trail.draw
src/pydrawcore/: __init__.py  cli.py  controller.py  discovery.py  exceptions.py  models.py  paths.py  program.py  protocol.py  transport.py
tests/: test_cli.py  test_controller.py  test_discovery.py  test_models.py  test_program.py  test_protocol.py  test_transport.py
