[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pydrawcore"
version = "0.1.0"
description = "Standalone Python controller for DrawCore devices."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Trailobot" }
]
keywords = ["drawcore", "idraw", "plotter", "robotics", "serial"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Manufacturing",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
  "pyserial>=3.5"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "build>=1.2"
]

[project.scripts]
pydrawcore = "pydrawcore.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["pydrawcore*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
